--- a/style.css
+++ b/style.css
@@ -1,15 +1,8 @@
-body {
-  text-align: center;
-}
-.container {
-  width: 80%;
-  margin: 0 auto;
+.bold {
+  font-weight: 900;
+  font-size: 2em;
 }
 
-form {
-  display: inline;
-}
-
-.done {
-  pointer-events: none;
+.none {
+  display: none;
 }
